// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Codegen typings-correct 1`] = `Array []`;

exports[`Codegen typings-ids 1`] = `
Array [
  "typings-ids/index.tsx (7,3): Property 'invalid' does not exist on type 'MyType'.",
]
`;

exports[`Codegen typings-locales 1`] = `
Array [
  "typings-locales/index.tsx (8,10): This condition will always return 'false' since the types '\\"en\\"' and '\\"foo\\"' have no overlap.",
]
`;

exports[`Codegen typings-no-strings 1`] = `
Array [
  "typings-no-strings/index.tsx (9,8): Type '{}' is not assignable to type 'never'.",
]
`;

exports[`Codegen typings-wrong-id 1`] = `
Array [
  "typings-wrong-id/index.tsx (7,8): Property 'nonExistant' does not exist on type 'Intl'.",
  "typings-wrong-id/index.tsx (11,18): Type '\\"non-existant\\"' is not assignable to type '\\"test\\"'.",
  "typings-wrong-id/index.tsx (13,23): Property 'nonExistant' does not exist on type 'Intl'.",
]
`;

exports[`Codegen typings-wrong-locale 1`] = `
Array [
  "typings-wrong-locale/index.tsx (3,14): Argument of type '\\"incorrect-locale\\"' is not assignable to parameter of type '\\"en\\"'.",
]
`;

exports[`Codegen typings-wrong-param 1`] = `
Array [
  "typings-wrong-param/index.tsx (7,15): Argument of type '{ prmtr: string; }' is not assignable to parameter of type '{ parameter: any; }'.
  Object literal may only specify known properties, and 'prmtr' does not exist in type '{ parameter: any; }'.",
  "typings-wrong-param/index.tsx (11,38): Type '{ prmtr: string; }' is not assignable to type '{ parameter: any; }'.
  Object literal may only specify known properties, and 'prmtr' does not exist in type '{ parameter: any; }'.",
  "typings-wrong-param/index.tsx (13,30): Argument of type '{ prmtr: string; }' is not assignable to parameter of type '{ parameter: any; }'.
  Object literal may only specify known properties, and 'prmtr' does not exist in type '{ parameter: any; }'.",
]
`;
